--- a/html.html
+++ b/html.html
@@ -6,10 +6,13 @@
 >
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Elevate your online presence with captivating content. Boost click-through rates with our expertly crafted meta descriptions. Let us help you make a lasting impression.">
-    <meta property="og:image" content="https://mcusercontent.com/b6f06db8b475a4267b26d820c/images/1f65ddd9-9df0-cb20-655c-7054f3f4488c.jpeg">
-    <meta property="og:image:alt" content="THE MADRAS BRANDING COMPANY.">
-    <meta property="og:type" content="TMBC website">
+    <title>TMBC</title>
+    <meta name="description" content="Elevate your online presence with captivating content. Boost click-through rates with our expertly crafted meta descriptions. Let us help you make a lasting impression." />
+
+    <!-- Image tag -->
+    <meta property="og:image" content="https://mcusercontent.com/b6f06db8b475a4267b26d820c/images/1f65ddd9-9df0-cb20-655c-7054f3f4488c.jpeg" />
+
+
     <title>TMBC</title>
 
 
